[package]

name = "cryptopals"
version = "0.0.1"
authors = ["Vítězslav Čížek <civ@blema.cz>"]

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
hex = "0.4.3"
openssl = "0.10.71"
rand = "0.9.0"

[dependencies.rust-crypto]
git = "https://github.com/DaGenix/rust-crypto"

[dependencies.rustful]
git = "https://github.com/Ogeon/rustful"

[[bin]]
name = "webs"
path = "src/webs/main.rs"

[[bin]]
name = "cryptopals"
path = "src/main.rs"
